Add FAQ about `Why is -Djava.ext.dirs not supported?` (#63)